--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -38,7 +38,17 @@ allprojects {
 
     repositories repos
 }
+plugins {
+  id "org.sonarqube" version "3.3"
+}
 
+sonarqube {
+  properties {
+    property "sonar.projectKey", "nicky0001_try2_2sassa"
+    property "sonar.organization", "nicky0001"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 apply plugin: 'com.android.library'
 
 android {
